refactor(util): 将 EnumUtil 的 list.get(0) 替换为 getFirst()
Java 21 引入 SequencedCollection.getFirst()，语义更清晰。